--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 				<br>
 				<a href="Mezamashi_short.html">目覚まし動作確認（5秒)</a>
 				<br>
+				<a href="testform.html">目覚まし動作確認（5秒)</a>
+				<br>
 			</section>
 		</article>
 		<!----- メインコンテンツ END ----->
