--- a/testform.html
+++ b/testform.html
@@ -1,11 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang = “ja”>
 <head>
-<title>サンプル</title>
+<meta charset = “UFT-8”>
+<title>フォームからデータを受け取る</title>
 </head>
 <body>
-<form method="post" action="input.php">
-何か書いて<input name="input" type="text" size="30" maxlength ="30">
-<input name="Button1" type="submit" value="書き込み">
+<h1>フォームデータの送信</h1>
+<form action = “index.php” method = “get”>
+<input type = “text” name =“comment/“><br/>
+<input type = “submit” value =“送信/“>
 </form>
 </body>
 </html>
