--- a/testform.html
+++ b/testform.html
@@ -12,7 +12,7 @@ echo $comment;
 <h1>フォームデータの送信</h1>
 <form action = “index.php” method = “get”>
 <input type = “text” name =“comment/“><br/>
-<input type = “submit” value =“送信/“>
+<input type = “submit” value =“送信“>
 </form>
 </body>
 </html>
