--- a/testform.html
+++ b/testform.html
@@ -9,7 +9,7 @@ echo $comment;
 <title>フォームからデータを受け取る</title>
 </head>
 <body>
-<h1>フォームデータの送信</h1>
+<h1>フォームデータの送信s</h1>
 <form action = “index.php” method = “get”>
 <input type = “text” name =“comment/“><br/>
 <input type = “submit” value =“送信“>
