--- a/testform.html
+++ b/testform.html
@@ -1,6 +1,8 @@
 <?php
-$comment = $_GET[‘comment’];
+if(isset($_POST[‘comment’])){
+$comment = $_POST[‘comment’];
 echo $comment;
+}
 ?>
 <!DOCTYPE html>
 <html lang = “ja”>
@@ -9,10 +11,10 @@ echo $comment;
 <title>フォームからデータを受け取る</title>
 </head>
 <body>
-<h1>フォームデータの送信s</h1>
-<form action = “index.php” method = “get”>
+<h1>フォームデータの送信</h1>
+<form action = “index.php” method = “post”>
 <input type = “text” name =“comment/“><br/>
-<input type = “submit” value =“送信“>
+<input type = “submit” value =“送信/“>
 </form>
 </body>
 </html>
