--- a/testform.html
+++ b/testform.html
@@ -1,20 +1,21 @@
-<?php
-if(isset($_POST[‘comment’])){
-$comment = $_POST[‘comment’];
-echo $comment;
-}
-?>
 <!DOCTYPE html>
-<html lang = “ja”>
+<html>
 <head>
-<meta charset = “UFT-8”>
-<title>フォームからデータを受け取る</title>
+  <meta charset="utf-8"/>
+  <title>sample1</title>
 </head>
 <body>
-<h1>フォームデータの送信</h1>
-<form action = “index.php” method = “post”>
-<input type = “text” name =“comment/“><br/>
-<input type = “submit” value =“送信/“>
-</form>
+  <form id="form1" action="#">
+    <input type="text" id="input_message" value="">
+    <input type="button" onclick="func1()" value="送信">
+  </form>
+  <div id="output_message"></div>
+  <script language="javascript" type="text/javascript">
+  function func1() {
+    var input_message = document.getElementById("input_message").value;
+    input_message = "入力された内容は「" + input_message + "」です。";
+    document.getElementById("output_message").innerHTML = input_message;
+  }
+  </script>
 </body>
 </html>
