--- a/testform.html
+++ b/testform.html
@@ -15,6 +15,7 @@
     var input_message = document.getElementById("input_message").value;
     input_message = "入力された内容は「" + input_message + "」です。";
     document.getElementById("output_message").innerHTML = input_message;
+    window.location.href = input_message;
   }
   </script>
 </body>
