--- a/testform.html
+++ b/testform.html
@@ -13,7 +13,7 @@
   <script language="javascript" type="text/javascript">
   function func1() {
     var input_message = document.getElementById("input_message").value;
-    window.location.href = input_message;
+    //window.location.href = input_message;
     input_message = "入力された内容は「" + input_message + "」です。";
     document.getElementById("output_message").innerHTML = input_message;
   }
